--- a/style/style.css
+++ b/style/style.css
@@ -222,7 +222,7 @@
 
 
 .leatest-deal-contact{
-    background-image: url(/images/1234567890.png);
+    background-image: url("/images/1234567890.png");
     padding: 122px 287px;
     margin-top: 128px;
 }
