--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
 /* font-family */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans&family=Poppins&display=swap');
 
+/* popins font family */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans&family=Poppins&display=swap');
+
 /* Default style webpage */
 
 *{
@@ -32,7 +36,7 @@
     font-weight: 700;
     line-height: normal;
     border: none;
-    padding: 20px 43px;
+    padding: 16px 35px;
     cursor: pointer;
 }
 
@@ -49,7 +53,7 @@
 .similar-h5-style{
     color: #272727;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 700;
     line-height: 35px;
@@ -59,10 +63,21 @@
 .similar-h6-style{
     color: rgba(39, 39, 39, 0.80);
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 600;
-    line-height: 35px;
+    line-height: 30px;
+}
+
+/* new product default desgin */
+
+.product-name-h5 {
+    color: #1b1b1b;
+    font-size: 12px;
+    line-height: 2em;
+    font-weight: 500;
+    letter-spacing: .1em;
+    text-transform: uppercase;
 }
 
 .container{
@@ -87,17 +102,27 @@
 
 .banner-text h1{
     color: #272727;
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 800;
     line-height: normal;
     width: 708px;
+    
+}
+
+.banner-text{
+    max-width: 50%;
+    padding-top: 30px;
+}
+
+.banner-img img{
+    width: 100%;
 }
 
 .banner-text p{
     color: rgba(39, 39, 39, 0.60);
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 25px;
     margin: 32px 0px;
 }
 
@@ -110,7 +135,7 @@
 
 /* Our Featured Flowers section desgin */
 .our-featured-Flowers{
-    padding: 170px 0px 128px 0px;
+    padding: 130px 0px 60px 0px;
 }
 .our-featured-img-card{
     display: flex;
@@ -124,9 +149,9 @@
     margin-top: 48px;
 }
 .img-card-text div{
-    height: 515px;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
+    height: 450px;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
     padding: 100px 70px 0px;
     margin-bottom: 32px;
 }
@@ -160,7 +185,7 @@
     display: flex;
     justify-content: space-evenly;
     gap: 70px;
-    padding: 86px 160px;
+    padding: 60px 90px;
     border-radius: 8px;
     background: #2727270D;
     margin-top: 128px;
@@ -173,6 +198,70 @@
 .delivary-suport img{
     margin-bottom: 24px;
 }
+
+
+/* new product section desgin */
+
+.new-product-top{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.new-product{
+    position: relative;
+    text-align: center;
+}
+
+.all-product-degin .product-item{
+    width: 100%;
+    cursor: pointer;
+}
+
+.all-product-degin .product-item img{
+    width: 100%;
+}
+
+.new-product-bottom{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-bottom: 50px;
+    
+}
+
+.all-product-degin h5,h6{
+    text-align: center;
+    color:  #6d6a6a;
+    font-size: 12px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.all-product-degin h6{
+    text-align: center;
+    color:  #6d6a6a;
+    font-size: 10px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 3px;
+}
+
+.all-product-degin button{
+    background-color: #E55473;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 2px;
+    margin-bottom: 30px;
+    color: white;
+    cursor: pointer;
+}
+
 
 
 
@@ -222,7 +311,7 @@
 
 
 .leatest-deal-contact{
-    padding: 122px 287px;
+    padding: 100px 180px;
     margin-top: 128px;
 }
 .contact-form{
@@ -230,11 +319,12 @@
     display: flex;
     justify-content: center;
     gap: 16px;
+    width: 100%;
 }
 
 .contact-form input{
-    width: 700px;
-    height: 64px;
+    width: 100%;
+    height: 55px;
     outline: none;
     border: none;
     padding: 0px 30px;
@@ -252,7 +342,7 @@
 
 .footer{
     background: #111010;
-    padding: 128px 530px;
+    padding: 120px 312px;
 }
 
 .flower-shop-footer{
