--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,7 @@
 
 .header{
     background-color: #E554731A;
+    min-height: 100vh;
 }
 
 .header-banner{
@@ -110,13 +111,11 @@
 }
 
 .banner-text{
-    max-width: 50%;
+    width: 50%;
     padding-top: 30px;
 }
 
-.banner-img img{
-    width: 100%;
-}
+
 
 .banner-text p{
     color: rgba(39, 39, 39, 0.60);
@@ -127,8 +126,9 @@
 }
 
 .banner-img img{
-    margin-bottom: -4px;
+    margin-bottom: -3px;
     padding-top: 50px;
+    width: 100%;
 }
 
 
@@ -372,6 +372,188 @@
 
 
 /* desgin complete */
+
+
+/* responsive desgin media quary */
+
+/* small device  */
+
+@media screen and (max-width:576px) {
+    /* .header banner */
+    .header-banner{
+        flex-direction: column;
+        align-items: start;
+    }
+    .banner-text{
+        width: 100%;
+    }
+    .banner-text h1{
+       width: 100%;
+        font-size: 40px;
+    }
+
+    /* futured section responsive */
+
+    .our-featured-img-card{
+        flex-direction: column;
+    }
+
+    /* delivary suport part  */
+
+    .delivary-suport-part{
+        flex-direction: column;
+    }
+
+    /* new product section  */
+
+    .new-product-top{
+        flex-direction: column;
+    }
+
+    /* new product bottom  */
+
+    .new-product-bottom{
+        flex-direction: column;
+    }
+
+    /* sale deal section  */
+
+    .sale-deal-container{
+        flex-wrap: wrap;
+        gap: 0px;
+    }
+    .sale-and-deal-section{
+        padding-top: 50px;
+    }
+
+    /* .instagram-flower-card */
+
+    .instagram-flower-card{
+        flex-direction: column;
+    }
+
+    /* .contact-form */
+
+    .leatest-deal-contact{
+        padding: 20px 20px;
+        
+    }
+
+    .similar-title-style{
+        color: black;
+        
+    }
+    .contact-form{
+        flex-direction: column;
+    }
+
+    .footer{
+        padding: 100px 0px;
+    }
+    
+
+
+}
+
+@media screen and (min-width:577px) and (max-width:991px) {
+    /* banner section */
+    .header-banner{
+        flex-direction: column;
+        align-items: start;
+        padding: 0px 15px;
+    }
+    /* futured section  */
+
+    .our-featured-img-card{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .our-featured-img-card .img-card-text{
+       flex-basis: 60%;
+    }
+    /* delivary suport part  */
+
+    .delivary-suport-part h6{
+        font-size: 15px;
+    }
+    .delivary-suport-part {
+        padding: 40px 40px;
+        flex-wrap: wrap;
+        gap: 40px;
+    }
+    .delivary-suport{
+        flex-basis: 40%;
+    }
+
+    /* new product responsive */
+
+    .new-product-top{
+        flex-wrap: wrap;
+    }
+
+    .new-product-top .new-product{
+        width: calc((100% - 20px)/2);
+    }
+
+    .new-product-bottom{
+        flex-wrap: wrap;
+        gap:20px ;
+    }
+
+    .new-product{
+        width: calc((100% - 20px)/2);
+    }
+
+    /* sale dale section  */
+    .sale-deal-container >div{
+        width: 47%;
+    }
+
+    
+    .sale-deal-container{
+        gap: 10px;
+        flex-wrap: wrap;
+        padding-top: 20px;
+    }
+
+    .sale-deal-img img{
+        width: 100%;
+    }
+    /* .instagram-flower-card */
+
+    .instagram-flower-card{
+        flex-wrap: wrap;
+    }
+
+    .flower-card{
+        width: 45%;
+    }
+
+    /* letest container  */
+
+    .contact-form{
+        flex-wrap: wrap;
+        gap: 30px;
+        
+    }
+
+    .leatest-deal-contact{
+        padding: 100px 30px;
+        background-repeat: no-repeat;
+    }
+
+    .footer{
+        padding: 100px 0px;
+    }
+
+}
+
+@media screen and (min-width:992px) and (max-width:1200px) {
+        .leatest-deal-contact{
+            padding: 100px 100px;
+            background-repeat: no-repeat;
+        }
+}
 
 
 
